[package]
name = "apimock"
version = "3.2.0"
edition = "2021"

description = "API mock Server generating HTTP/JSON responses"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["web-programming", "development-tools", "command-line-utilities"]
keywords = ["http", "api", "mock", "testing"]
repository = "https://github.com/nabbisen/apimock-rs"
readme = "README.md"
rust-version = "1.78.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[features]
debug = [] # activates Debug trait on custom structs
spawn = [] # offers another entry point for subprocess

[dependencies]
tokio = { version = "^1.44", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0"
toml = "0"
serde = "1"
serde_json = "1"
json5 = "0"
console = "0"
log = "0"
rhai = { version = "1", features = ["sync", "serde"] }
csv = "1"

[dev-dependencies]
hyper = { version = "1", features = ["client"] }
rand = "0"
