[package]
name = "apimock"
version = "4.0.0-rc.3"
edition = "2021"

description = "API mock Server generating HTTP/JSON responses"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["web-programming", "development-tools", "command-line-utilities"]
keywords = ["http", "api", "mock", "testing"]
repository = "https://github.com/nabbisen/apimock-rs"
readme = "README.md"
rust-version = "1.78.0"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[features]
default = []
spawn = [] # offers another entry point for subprocess
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[[bin]]
name = "apimock"
path = "src/main.rs"
required-features = []

[dependencies]
tokio = { version = "^1.44", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0"
log = "0"
console = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
json5 = "0"
csv = "1"
rhai = { version = "1", features = ["sync", "serde"] }
napi = { version = "2", default-features = false, features = ["napi5", "async"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
hyper = { version = "1", features = ["client"] }
rand = "0"

[build-dependencies]
napi-build = { version = "2", optional = true }
