[package]
name = "apimock"
version = "4.0.7"
edition = "2021"

description = "A developer-friendly, robust and functional HTTP mock server built in Rust."
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["web-programming", "development-tools", "command-line-utilities"]
keywords = ["http", "api", "mock", "testing"]
repository = "https://github.com/apimokka/apimock-rs"
readme = "README.md"
rust-version = "1.78.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[features]
default = []
spawn = [] # offers another entry point for subprocess

[dependencies]
tokio = { version = "^1.44", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0"
log = "0"
console = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
json5 = "0"
csv = "1"
rhai = { version = "1", features = ["sync", "serde"] }

[dev-dependencies]
hyper = { version = "1", features = ["client"] }
rand = "0"
